Migrate backend from Spring Data JPA to Spring JDBC / JdbcTemplate
- Remove spring-boot-starter-data-jpa from pom.xml
- Delete all @Entity classes and JpaRepository interfaces (entity/ package)
- Add model/ package with plain POJOs (Lombok @Data @Builder)
- Add rowmapper/ package with RowMapper implementations (simple and rich JOIN mappers)
- Rewrite all repositories as concrete classes using JdbcTemplate with explicit SQL
- Rewrite AuthService, AdminService, FuncionarioService, UsuarioService to use new repositories
- Update UserDetailsServiceImpl: model.Usuario import, getRol() without .name()
- Update GlobalExceptionHandler: add DataAccessException handler
- Update AdminController: import model.Fase instead of entity.Fase
- Remove all spring.jpa.* configuration from application.yml
- Add SQL scripts under resources/db/

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>