@@ -3,10 +3,13 @@ package com.ucu.ticketing.service;
 import com.ucu.ticketing.dto.request.DispositivoRequest;
 import com.ucu.ticketing.dto.request.ValidacionRequest;
 import com.ucu.ticketing.dto.response.ValidacionResponse;
-import com.ucu.ticketing.entity.*;
 import com.ucu.ticketing.exception.AccesoDenegadoException;
 import com.ucu.ticketing.exception.RecursoNoEncontradoException;
 import com.ucu.ticketing.exception.ReglaNegocioException;
+import com.ucu.ticketing.model.Dispositivo;
+import com.ucu.ticketing.model.Entrada;
+import com.ucu.ticketing.model.TokenQr;
+import com.ucu.ticketing.model.Usuario;
 import com.ucu.ticketing.repository.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -15,7 +18,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,43 +27,27 @@ public class FuncionarioService {
     private final DispositivoRepository dispositivoRepository;
     private final FuncionarioSectorRepository funcionarioSectorRepository;
     private final TokenQrRepository tokenQrRepository;
-    private final EntradaRepository entradaRepository;
     private final ValidacionTernariaRepository validacionTernariaRepository;
 
     @Transactional
     public void registrarDispositivo(Long funcionarioId, DispositivoRequest req) {
-        Funcionario funcionario = funcionarioRepository.findById(funcionarioId)
+        funcionarioRepository.findById(funcionarioId)
                 .orElseThrow(() -> new RecursoNoEncontradoException("Funcionario no encontrado"));
 
-        dispositivoRepository.findByDeviceUidAndFuncionario(req.getDeviceUid(), funcionario)
+        dispositivoRepository.findByDeviceUidAndFuncionarioId(req.getDeviceUid(), funcionarioId)
                 .ifPresentOrElse(
                         d -> { /* ya existe, no duplicar */ },
-                        () -> {
-                            Dispositivo d = Dispositivo.builder()
-                                    .funcionario(funcionario)
-                                    .deviceUid(req.getDeviceUid())
-                                    .build();
-                            dispositivoRepository.save(d);
-                        }
+                        () -> dispositivoRepository.insert(funcionarioId, req.getDeviceUid())
                 );
     }
 
     public List<Map<String, Object>> getSectoresAsignados(Long funcionarioId) {
-        return funcionarioSectorRepository.findByFuncionarioUsuarioId(funcionarioId)
-                .stream()
-                .map(fs -> Map.<String, Object>of(
-                        "sectorId", fs.getSector().getId(),
-                        "codigo", fs.getSector().getCodigo(),
-                        "capacidadMaxima", fs.getSector().getCapacidadMaxima(),
-                        "estadioId", fs.getSector().getEstadio().getId(),
-                        "estadioNombre", fs.getSector().getEstadio().getNombre()
-                ))
-                .collect(Collectors.toList());
+        return funcionarioSectorRepository.getSectoresAsignados(funcionarioId);
     }
 
     @Transactional
     public ValidacionResponse validar(Long funcionarioId, ValidacionRequest req) {
-        // 1. Buscar token QR
+        // 1. Buscar token QR con todos los datos de entrada via JOIN
         TokenQr token = tokenQrRepository.findByCodigo(req.getCodigoQr())
                 .orElseThrow(() -> new RecursoNoEncontradoException("QR no encontrado o inválido"));
 
@@ -73,50 +59,37 @@ public class FuncionarioService {
             throw new ReglaNegocioException("El QR está expirado. Pedile al titular que regenere el código");
         }
 
-        // 3. Obtener la entrada
+        // 3. Obtener la entrada (con sector, evento, propietario ya populados por el JOIN)
         Entrada entrada = token.getEntrada();
 
         // 4. Verificar que el sector esté asignado al funcionario
-        boolean sectorAutorizado = funcionarioSectorRepository
-                .existsByFuncionarioIdAndSectorId(funcionarioId, entrada.getSector().getId());
-        if (!sectorAutorizado) {
+        if (!funcionarioSectorRepository.existsByFuncionarioIdAndSectorId(funcionarioId, entrada.getSectorId())) {
             throw new AccesoDenegadoException("No estás habilitado para validar entradas de este sector");
         }
 
         // 5. Verificar que la entrada no esté ya consumida
-        if (entrada.getEstado() == EstadoEntrada.CONSUMIDA) {
+        if ("CONSUMIDA".equals(entrada.getEstado())) {
             throw new ReglaNegocioException("Entrada ya validada: esta entrada fue consumida anteriormente");
         }
 
         // 6. Obtener el dispositivo
-        Funcionario funcionario = funcionarioRepository.findById(funcionarioId)
+        funcionarioRepository.findById(funcionarioId)
                 .orElseThrow(() -> new RecursoNoEncontradoException("Funcionario no encontrado"));
 
-        Dispositivo dispositivo = dispositivoRepository.findByDeviceUidAndFuncionario(req.getDeviceUid(), funcionario)
+        Dispositivo dispositivo = dispositivoRepository.findByDeviceUidAndFuncionarioId(req.getDeviceUid(), funcionarioId)
                 .orElseThrow(() -> new RecursoNoEncontradoException("Dispositivo no registrado. Registralo primero"));
 
-        // 7. Insertar validacion_ternaria (el trigger T6 marcará la entrada como CONSUMIDA)
-        ValidacionTernariaId vtId = new ValidacionTernariaId(funcionarioId, dispositivo.getId(), entrada.getId());
-        ValidacionTernaria vt = ValidacionTernaria.builder()
-                .id(vtId)
-                .funcionario(funcionario)
-                .dispositivo(dispositivo)
-                .entrada(entrada)
-                .tokenQr(token)
-                .fechaHora(LocalDateTime.now())
-                .build();
-        validacionTernariaRepository.save(vt);
-        validacionTernariaRepository.flush();
-
-        // Refrescar estado de la entrada tras el trigger
-        entradaRepository.findById(entrada.getId()).ifPresent(e -> entrada.setEstado(e.getEstado()));
+        // 7. Insertar validacion_ternaria — el trigger T6 marcará la entrada como CONSUMIDA
+        LocalDateTime ahora = LocalDateTime.now();
+        validacionTernariaRepository.insert(
+                funcionarioId, dispositivo.getId(), entrada.getId(), token.getId(), ahora);
 
         Usuario propietario = entrada.getPropietarioActual();
 
         return ValidacionResponse.builder()
                 .mensaje("ACCESO PERMITIDO")
                 .entradaId(entrada.getId())
-                .fechaValidacion(vt.getFechaHora())
+                .fechaValidacion(ahora)
                 .propietario(ValidacionResponse.PropietarioDto.builder()
                         .id(propietario.getId())
                         .mail(propietario.getMail())
@@ -162,6 +135,6 @@ public class FuncionarioService {
                                     .build())
                             .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 }
